Event Viewer virkandi

--- a/timeandplace/res/layout/main.xml
+++ b/timeandplace/res/layout/main.xml
@@ -15,5 +15,10 @@
 		android:layout_height="wrap_content"
 		android:onClick="AddEvent">
 		</Button>
-<Button android:text="@string/view_button" android:id="@+id/viewButton" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
+<Button android:text="@string/view_button" 
+		android:id="@+id/viewButton" 
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content"
+		android:onClick="ViewEvent">
+		</Button>
 </LinearLayout>
