--- a/timeandplace/res/layout/addevent.xml
+++ b/timeandplace/res/layout/addevent.xml
@@ -42,7 +42,7 @@
     	android:layout_width="fill_parent" 
     	android:layout_height="wrap_content"
     	android:layout_marginTop="15px"
-    >
+    android:inputType="number">
     </EditText>
 	<TextView
 		android:id="@+id/txt_stadsetning"
