--- a/timeandplace/res/layout/addevent.xml
+++ b/timeandplace/res/layout/addevent.xml
@@ -23,7 +23,7 @@
     	android:layout_marginTop="1px">
     </EditText>
     <TextView 
-    	android:id="@+id/edi_lysing"
+    	android:id="@+id/txt_lysing"
     	android:layout_marginTop="1px" 
     	android:textSize="18px" 
     	android:layout_width="fill_parent" 
@@ -31,7 +31,7 @@
     	android:text="Lýsing atburðar:" >
     </TextView>
     <EditText 
-    	android:id="@+id/edi_nafn"
+    	android:id="@+id/edi_lysing"
     	android:layout_below="@+id/txt_nafn"
     	android:layout_centerHorizontal="true"
     	android:layout_width="fill_parent" 
