--- a/timeandplace/res/layout/dia_nafn.xml
+++ b/timeandplace/res/layout/dia_nafn.xml
@@ -10,10 +10,9 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/btnConfirm"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
-android:text="Add text"
+android:text="Uppfæra"
 android:layout_below="@+id/txtNewText"
 android:layout_alignParentLeft="true"
-android:onClick="uppfaeraNafn"
 >
 </Button>
 <EditText
